name:                seq-queue
version:             0.1.0.0
synopsis:            Opaque queue wrapper for Data.Sequence
description:         Please see README.md
homepage:            https://github.com/githubuser/seq-queue#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          example@example.com
copyright:           2016 Matthew Farrell
category:            Container
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Sequence.Queue
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

test-suite seq-queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , seq-queue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/seq-queue
